projects page, about updated

--- a/templates/about.html
+++ b/templates/about.html
@@ -61,19 +61,33 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim  </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
-                  <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  <h3>Hello and nice to meet you!</h3>
+                  <p>As my first page says, I'm Jakub Kunikowski, and let me present few facts about myself.
+                  I am currently on my second year of my Bachelor degree in IT sphere, hoping to become one of the best Software Engineers!
+                      I always wanted to become something beyond average, therefore I am doing my best and I spend my whole free time
+                      improving my programming skills by doing simple, yet very useful projects as a proof of my skillset.
+                  </p>
+                  <h3>My time-wasters</h3>
+                  <p>Although I spend time hard-studying, I treat it as a form of relaxation. I feel excited, whenever I learn new technologies,
+                    and that is the main reason I cannot stop improving. Beside all that, I am into continuously evolving AI and machine learning.
+                  <h3>Technologies</h3>
+                    <div class="technologies">
+                        <div class="btn btn-default">Python</div>
+                        <div class="btn btn-default">JavaScript</div>
+                        <div class="btn btn-default">Scala</div>
+                        <div class="btn btn-default">TypeScript</div>
+                        <div class="btn btn-default">HTML</div>
+                        <div class="btn btn-default">CSS</div>
+                        <div class="btn btn-default">SCSS</div>
+                        <div class="btn btn-default">Django</div>
+                        <div class="btn btn-default">Flask</div>
+                        <div class="btn btn-default">Git</div>
+                        <div class="btn btn-default">Linux</div>
+                        <div class="btn btn-default">Bash</div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="../static/assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="../static/assets/images/profil.jpg" class="img-responsive1" alt="">
                 </div>
               </div>
             </div>
