--- a/templates/projects.html
+++ b/templates/projects.html
@@ -68,36 +68,39 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="work.html" title="" class="black-image-project-hover">
-                        <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                      <a href="https://github.com/fabilier228/Password-Generator" title="" class="black-image-project-hover">
+                        <img src="../static/assets/images/passgen.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Your personal password/code generator!</p>
+                        <h3>Password Generator</h3>
+                        <p>A Python application made by using Tkinter GUI in order to keep track of perhaps promotion codes to Your
+                            website, but also to generate necessary password to create an account!</p>
                         <a href="https://github.com/fabilier228/Password-Generator" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="work.html" title="" class="black-image-project-hover">
-                        <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                      <a href="https://github.com/fabilier228/Password_checker" title="" class="black-image-project-hover">
+                        <img src="../static/assets/images/passcheck.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                        <a href="work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Password Checker</h3>
+                        <p>A Python script for those, who feel insecure about their password and don't want to share anywhere near internet,
+                        but still want to know how many times it has been hacked.</p>
+                        <a href="https://github.com/fabilier228/Password_checker" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="work.html" title="" class="black-image-project-hover">
-                        <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                      <a href="https://github.com/fabilier228/Blog_Webapp" title="" class="black-image-project-hover">
+                        <img src="../static/assets/images/blogapp.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Blog App</h3>
+                        <p>A Blog app Python project that contains simple API with possibility to post Your own reflections.
+                        All made using popular Django framework!</p>
+                        <a href="https://github.com/fabilier228/Blog_Webapp" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -108,37 +111,39 @@
             <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="work.html" class="black-image-project-hover">
-                      <img src="../static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
+                    <a href="https://github.com/fabilier228/latest_IT_news" class="black-image-project-hover">
+                      <img src="../static/assets/images/itnews.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="work.html" class="btn btn-default">Discover</a>
+                      <h3>Latest IT News</h3>
+                      <p>Another script written in Python language for those eager to know all latest news about IT sphere
+                      from known <a href="https://news.ycombinator.com">website</a>.</p>
+                      <a href="https://github.com/fabilier228/latest_IT_news" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
-                      <a href="work.html" class="black-image-project-hover">
-                        <img src="../static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
+                      <a href="https://github.com/fabilier228/portfo" class="black-image-project-hover">
+                        <img src="../static/assets/images/portfo.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="work.html" class="btn btn-default">Discover</a>
+                        <h3>Portfolio Website</h3>
+                        <p>Source code for website You are currently browsing through. I hope You like what You see!</p>
+                        <a href="https://github.com/fabilier228/portfo" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
                     <div class="col-sm-4">
-                      <a href="work.html" class="black-image-project-hover">
-                        <img src="../static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                      <a href="https://github.com/fabilier228/boutique_database" class="black-image-project-hover">
+                        <img src="../static/assets/images/dbbutique.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="work.html" class="btn btn-default">Discover</a>
+                        <h3>Boutique Database</h3>
+                        <p>A database provided for a boutique shop in order to keep track of store's merchandise using JSON files
+                        and few simple individual functions for each shop's needs.</p>
+                        <a href="https://github.com/fabilier228/boutique_database" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
