--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">
   <link href="../static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Contact page</title>
 
 <link href="../static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -79,29 +79,29 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          +48 666 270 725
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          kunikowskikuba@gmail.com
                         </li>
                         <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                          42 rue Moulbert 75016 Paris
+{#                          <span class="fa-icon">#}
+{#                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>#}
+{#                          </span>#}
+{#                          42 rue Moulbert 75016 Paris#}
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
+                      <a href="https://www.facebook.com/fabilier.tss" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
+                      <a href="https://github.com/fabilier228" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/jakub-kunikowski-43a07731a/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
@@ -133,20 +133,6 @@
      navActivePage();
   });
 </script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---> <script type="text/javascript" src="../static/main.70a66962.js"></script></body>
+<script type="text/javascript" src="../static/main.70a66962.js"></script></body>
 
 </html>
