--- a/templates/projects.html
+++ b/templates/projects.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/apple-icon-180x180.png">
   <link href="../static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Projects</title>
 
 <link href="../static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -86,7 +86,7 @@
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>Password Checker</h3>
-                        <p>A Python script for those, who feel insecure about their password and don't want to share anywhere near internet,
+                        <p>A Python script for those, who feel insecure about their password and don't want to share it anywhere near internet,
                         but still want to know how many times it has been hacked.</p>
                         <a href="https://github.com/fabilier228/Password_checker" title="" class="btn btn-default">Discover</a>
                       </div>
@@ -187,19 +187,6 @@
   });
 </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0s]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---> <script type="text/javascript" src="../static/main.70a66962.js"></script></body>
+<script type="text/javascript" src="../static/main.70a66962.js"></script></body>
 
 </html>
