time-wasters changed

--- a/templates/about.html
+++ b/templates/about.html
@@ -68,8 +68,10 @@
                       improving my programming skills by doing simple, yet very useful projects as a proof of my skillset.
                   </p>
                   <h3>My time-wasters</h3>
-                  <p>Although I spend time hard-studying, I treat it as a form of relaxation. I feel excited, whenever I learn new technologies,
+                  <p>Although I spend time hard-studying, I treat it as a form of relaxation. I feel excited, everytime I learn new technologies,
                     and that is the main reason I cannot stop improving. Beside all that, I am into continuously evolving AI and machine learning.
+                    Whenever I am not programming, I do sports like snowboarding and football, but I also fascinate universe and things all around as thing I will not ever be able
+                    to reach or understand.
                   <h3>Technologies</h3>
                     <div class="technologies">
                         <div class="btn btn-default">Python</div>
