--- a/templates/about.html
+++ b/templates/about.html
@@ -86,6 +86,8 @@
                         <div class="btn btn-default">Git</div>
                         <div class="btn btn-default">Linux</div>
                         <div class="btn btn-default">Bash</div>
+                        <div class="btn btn-default">React</div>
+                        <div class="btn btn-default">Express</div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
