--- a/templates/about.html
+++ b/templates/about.html
@@ -88,6 +88,8 @@
                         <div class="btn btn-default">Bash</div>
                         <div class="btn btn-default">React</div>
                         <div class="btn btn-default">Express</div>
+                        <div class="btn btn-default">Next.js</div>
+                        <div class="btn btn-default">Java</div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
