--- a/templates/about.html
+++ b/templates/about.html
@@ -87,9 +87,12 @@
                         <div class="btn btn-default">Linux</div>
                         <div class="btn btn-default">Bash</div>
                         <div class="btn btn-default">React</div>
-                        <div class="btn btn-default">Express</div>
+                        <div class="btn btn-default">Express.js</div>
                         <div class="btn btn-default">Next.js</div>
                         <div class="btn btn-default">Java</div>
+                        <div class="btn btn-default">Docker</div>
+                        <div class="btn btn-default">MongoDB</div>
+                        <div class="btn btn-default">SQL</div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6">
